<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SCROLLER_ID2"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.test.kotlintutorial.MainActivity"
    tools:showIn="@layout/activity_main">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
        android:id="@+id/txtAppIntro"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_intro"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:background="@drawable/kotlintutotrialbg"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="10dp" />

    <Button
        android:id="@+id/btnInKotlinIntro"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/intro_label"
        android:textAllCaps="false"
        android:gravity="left|center_vertical"
        android:background="@color/colorLightBlue"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAppIntro"/>

    <Button
        android:id="@+id/btnJavaCodeVsKotlinCode"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/javacode_vs_kotlincode_label"
        android:textAllCaps="false"
        android:gravity="left|center_vertical"
        android:background="@color/colorLightBlue"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnInKotlinIntro"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btnBasics"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/basics_label"
        android:textAllCaps="false"
        android:gravity="left|center_vertical"
        android:background="@color/colorLightBlue"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnJavaCodeVsKotlinCode"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btnClassandObject"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/clsobj_label"
        android:textAllCaps="false"
        android:gravity="left|center_vertical"
        android:background="@color/colorLightBlue"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnBasics"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btnFunandLambdas"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/funandlambdas_label"
        android:textAllCaps="false"
        android:gravity="left|center_vertical"
        android:background="@color/colorLightBlue"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnClassandObject"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btnCollInKotlin"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/collections_label"
        android:textAllCaps="false"
        android:gravity="left|center_vertical"
        android:background="@color/colorLightBlue"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnFunandLambdas"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btnCallAServlet"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/callservlet_label"
        android:textAllCaps="false"
        android:gravity="left|center_vertical"
        android:background="@color/colorLightBlue"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnCollInKotlin"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btnCallASpring"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/callspring_label"
        android:textAllCaps="false"
        android:gravity="left|center_vertical"
        android:background="@color/colorLightBlue"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnCallAServlet"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btnCallARESTService"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/callrestservice_label"
        android:textAllCaps="false"
        android:gravity="left|center_vertical"
        android:background="@color/colorLightBlue"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnCallASpring"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btnPostandPersistAForm"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/post_persist_a_form_label"
        android:textAllCaps="false"
        android:gravity="left|center_vertical"
        android:background="@color/colorLightBlue"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnCallARESTService"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/btnStudyMaterialAndRef"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/StudyMaterialAndRef_label"
        android:textAllCaps="false"
        android:gravity="left|center_vertical"
        android:background="@color/colorLightBlue"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnPostandPersistAForm"
        android:layout_marginTop="5dp"/>

</android.support.constraint.ConstraintLayout>
</ScrollView>
